--- a/style.css
+++ b/style.css
@@ -5,12 +5,14 @@ html {
     box-sizing: border-box;
   }
 body {
+    margin: 0;
+    padding: 0;
   margin:auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     color:white;
-    background-color:darkgrey
+    background-color:#2F4F4F
   }
   .header{
     background-color:palegoldenrod
@@ -22,25 +24,27 @@ body {
   }
 .Photo{
   border-radius: 35%;
-  height:400px;
-  width: 400px;
+  height:80%;
+  width: 40%;
   box-shadow: 0 1px 4px;
+  margin-left: 35%;
+}
+.nav-item{
+  font-size:20px;
 }
   .nav-list {
     display: flex;
     justify-content: flex-end;
-    align-items: center;
-  }
-  .nav-list {
+    align-items: center; 
     list-style: none;
   }
+
   .nav-link {
     padding: 0 20px;
     line-height: 50px;
-  }
-  .nav-link {
     transition: .3s;
   }
+
   .section-item a {
     color: #829985;
     text-decoration: none;  
@@ -52,10 +56,11 @@ body {
   .main-container {
     display: flex;
     flex-wrap: wrap;
+      justify-content: space-between;
   }
   
   .section {
-    width: 50%;
+    width: 100%;
   }
   @media (max-width: 768px) {
        .section {
@@ -63,13 +68,92 @@ body {
     }
   }
   .main-title{
+
     position: relative;
     padding: 0;
     margin-bottom: 20px;
-    color: #4d2323;
-    font-size: 32px;
+    color: #F5F5DC;
+    font-size: 64px;
     font-weight: 300;
     letter-spacing: 10px;
     line-height: 50px;
-    word-spacing: 3px;
   }
+  .section-profile-title {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    padding-left: 10%;
+    text-align: center;
+    text-transform: uppercase;}
+  
+.section-title{
+  color: #F5F5DC;
+  font-size: 35px;
+  font-weight: 300;
+  line-height: 50px;
+}
+.contacts-item{
+  color: #FAEBD7;
+  font-size: 25px;
+  font-weight: 300;
+  line-height: 50px;
+}
+.section-summary{
+  font-size:25px;
+  color:#FAEBD7;
+  font-weight: 300;
+  line-height: 50px
+}
+.courses-item{
+  font-size:25px;
+  color:#FAEBD7;
+  font-weight: 300;
+  line-height: 50px 
+}
+.pre{
+  font-size:20px;
+  color:#FAEBD7;
+  font-weight: 200;
+  line-height: 50px  
+}
+.education-item{
+  font-size:25px;
+  color:#FAEBD7;
+  font-weight: 300;
+  line-height: 50px  
+}
+.Languanges-item{
+  font-size:25px;
+  color:#FAEBD7;
+  font-weight: 300;
+  line-height: 50px   
+}
+.footer{
+  background-color:palegoldenrod; 
+  width: auto;
+  height: 100px;
+}
+.footer-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  color: black;
+  font-size: 35px;
+}
+div{
+  display:block;
+}
+.github{
+  color: black;
+  text-decoration: none;
+  line-height: 45px;
+}
+.rss{
+  width: 121px;
+  height: 45px;
+  background-image: url("./assets/img/rs.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  color:black;
+}
