--- a/style.css
+++ b/style.css
@@ -150,10 +150,10 @@ div{
   line-height: 45px;
 }
 .rss{
+  display: inline-block;
   width: 121px;
   height: 45px;
-  background-image: url("./assets/img/rs.svg");
-  background-size: contain;
+  background-image: url("./assets/img/1.png");
+  background-size: cover;
   background-repeat: no-repeat;
-  color:black;
 }
